# radio-relay

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pxt.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.claude/skills/pxt/: SKILL.md
.claude/skills/pxt/references/: block-annotations.md  error-codes.json
.claude/skills/static-typescript/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docker/: Makefile  README.md
docs/clasi/: .clasi.db
docs/clasi/architecture/: architecture-update-006.md  architecture-update-007.md
docs/clasi/reflections/: 2026-03-22-skipped-dispatch-logging.md
docs/clasi/sprints/001-agent-skills-project-identity/: sprint.md
docs/clasi/sprints/002-template-cleanup-configuration/: sprint.md
docs/clasi/sprints/003-npm-scripts-build-pipeline/: sprint.md
docs/clasi/sprints/005-codespaces-docker/: sprint.md
docs/clasi/sprints/006-documentation-deploy-template-config/: sprint.md
docs/clasi/sprints/007-ci-workflow-pxt-json-lint/: sprint.md
docs/clasi/sprints/008-review-fixes-release-script/: sprint.md
docs/clasi/sprints/009-fix-docker-image-name-build-errors/: sprint.md
docs/clasi/todo/: bridge-serial-send-not-reaching-device.md
radio_relay/: __init__.py  __main__.py  discovery.py  relay.py  tui.py
scripts/: bridge.js  build.js  camera_mcp.py  deploy.js  devices.js  flash-local.js  lint-pxt-files.js  release.sh  send.py  serial.js  setup.js
src/: announce.ts  colorsensor.ts  main-bridge.ts  main-motor.ts  main.ts
test/: test.ts
(+51 files in other folders)
